--- a/XYZReader/build.gradle
+++ b/XYZReader/build.gradle
@@ -1,20 +1,23 @@
 buildscript {
     repositories {
         mavenCentral()
+        google()
+        jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.0'
+        classpath 'com.android.tools.build:gradle:3.0.1'
     }
 }
 apply plugin: 'com.android.application'
 
 repositories {
     mavenCentral()
+    google()
+    jcenter()
 }
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.2"
 
     defaultConfig {
         minSdkVersion 19
@@ -30,5 +33,7 @@ dependencies {
     compile "com.android.support:recyclerview-v7:$androidSupportVersion"
     compile "com.android.support:cardview-v7:$androidSupportVersion"
     compile 'com.squareup.okhttp3:okhttp:3.1.2'
+    // Ingesting the design library
+    compile "com.android.support:design:$androidSupportVersion"
     compile files('libs/volley.jar')
 }
