--- a/XYZReader/build.gradle
+++ b/XYZReader/build.gradle
@@ -17,16 +17,16 @@ repositories {
 }
 
 android {
-    compileSdkVersion 25
+    compileSdkVersion 26
 
     defaultConfig {
         minSdkVersion 19
-        targetSdkVersion 25
+        targetSdkVersion 26
     }
 }
 
 dependencies {
-    compile "com.android.support:support-v4:$androidSupportVersion"
+    compile "com.android.support:support-compat:$androidSupportVersion"
     compile "com.android.support:support-v13:$androidSupportVersion"
     compile "com.android.support:appcompat-v7:$androidSupportVersion"
     compile "com.android.support:palette-v7:$androidSupportVersion"
@@ -36,4 +36,7 @@ dependencies {
     // Ingesting the design library
     compile "com.android.support:design:$androidSupportVersion"
     compile files('libs/volley.jar')
+    // image loading library Glide itself
+    implementation 'com.github.bumptech.glide:glide:4.6.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
 }
